[tool.poetry]
name = "myml"
version = "0.1.0"
description = ""
authors = ["alex <alex.levinkoopman85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
watermark = "^2.5.0"



[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
